--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>scrolling effect</title>
+    <title>OWAIS PORTFOLIO</title>
 </head>
 <body>
     <header id="site-header" class="header-sec">
