making fully responsive

--- a/index.html
+++ b/index.html
@@ -8,42 +8,44 @@
     <title>OWAIS PORTFOLIO</title>
 </head>
 <body>
-    <header id="site-header" class="header-sec">
-        <div class="header-col-1">
-            <div class="h1 head-heading">Programmer Owais</div>
-        </div>
-        <div class="header-col-2">
-            <div class="hamburger">
-                <div class="hamburger-menu"></div>
+    <header id="site-header" >
+        <div class="header-sec container1">
+            <div class="header-col-1">
+                <div class="h1 head-heading">Programmer Owais</div>
             </div>
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a href="##" class="nav-links themes">Change Theme <span class="link-arrow">></span></a>
-                    <ul class="sub-list sub-list1">
-                        <li class="sub-items"><a href="##" class="sub-nav-links" onclick="defaultTheme()">Default Theme</a></li>
-                        <li class="sub-items"><a href="##" class="sub-nav-links" onclick="theme1()">Theme 1</a></li>
-                        <li class="sub-items"><a href="##" class="sub-nav-links" onclick="theme2()">Theme2</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item"><a href="#skills" class="nav-links">Skills </a></li>
-                <li class="nav-item">
-                    <a href="##" class="nav-links works">My Work <span class="link-arrow">></span></a>
-                    <ul class="sub-list sub-list2">
-                        <li class="sub-items"><a href="#mywork" class="sub-nav-links">Work</a></li>
-                        <li class="sub-items"><a href="#psd" class="sub-nav-links">PSD TO HTML</a></li>
-                        <li class="sub-items"><a href="#projects" class="sub-nav-links">My Projects</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item"><a href="#interest" class="nav-links">My Interest</a></li>
-                <li class="nav-item"><a href="#contact" class="nav-links">Contact Me </a></li>
-            </ul>
+            <div class="header-col-2">
+                <div class="hamburger">
+                    <div class="hamburger-menu"></div>
+                </div>
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="##" class="nav-links themes">Change Theme <span class="link-arrow">></span></a>
+                        <ul class="sub-list sub-list1">
+                            <li class="sub-items"><a href="##" class="sub-nav-links" onclick="defaultTheme()">Default Theme</a></li>
+                            <li class="sub-items"><a href="##" class="sub-nav-links" onclick="theme1()">Theme 1</a></li>
+                            <li class="sub-items"><a href="##" class="sub-nav-links" onclick="theme2()">Theme2</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a href="#skills" class="nav-links">Skills </a></li>
+                    <li class="nav-item">
+                        <a href="##" class="nav-links works">My Work <span class="link-arrow">></span></a>
+                        <ul class="sub-list sub-list2">
+                            <li class="sub-items"><a href="#mywork" class="sub-nav-links">Work</a></li>
+                            <li class="sub-items"><a href="#psd" class="sub-nav-links">PSD TO HTML</a></li>
+                            <li class="sub-items"><a href="#projects" class="sub-nav-links">My Projects</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a href="#interest" class="nav-links">My Interest</a></li>
+                    <li class="nav-item"><a href="#contact" class="nav-links">Contact Me </a></li>
+                </ul>
+            </div>
         </div>
         
     </header>
 
     <main>
         <!------------------------------------------------  SECTION 1 -------------------------------------------->
-        <section class="section1">
+        <section class="section1 container1">
             <div class="section1part1">
                 <h3 class="h3 section1-heading">Hi there 👋  </h3>
                     <div class="para1">
@@ -73,7 +75,7 @@
             </div>
         </section>
         <!------------------------------------------------  SECTION 2 -------------------------------------------->
-        <section class="section2">
+        <section class="section2 container1">
             <div class="div-img">
                 <img src="images/cartoonimg3.jpg" data-scroll alt="images" class="section2-img scroll-effect-1 img-change1">
             </div>
@@ -93,7 +95,7 @@
             </div>
         </section>
         <!------------------------------------------------  SECTION 3 -------------------------------------------->
-        <section id="skills"  class="section3">
+        <section id="skills"  class="section3 container1">
             <div data-scroll class="card card3 scroll-effect-3">
                 <div class="header-section">
                     <h1 class="h1 card-heading card-heading3">HTML5 <img src="images/html5.svg" alt="html icon" class="card-icons"> </h1>
@@ -365,14 +367,14 @@
             </div>
         </section>
         <!------------------------------------------------  SECTION 4 -------------------------------------------->
-        <section class="section4">
+        <section class="section4 container1">
             <div class="section4-img-container">
                 <img data-scroll src="images/cartoonimg.jpg" alt="images" class="section4-img scroll-effect-2">
                 <img data-scroll src="images/cartoonimg2.jpg" alt="images" class="section4-img scroll-effect-1 img-change2">
             </div>
         </section>
          <!------------------------------------------------  SECTION 5 -------------------------------------------->
-         <section id="mywork" class="section5">
+         <section id="mywork" class="section5 container1">
              <div data-scroll class="h2 section5-heading section5-heading1 scroll-effect-3">My Work</div>
              <p data-scroll class="para2 scroll-effect-3">
                  I have done &#10004 various jobs  in many companies related to web development  and
@@ -547,7 +549,7 @@
          </section>
          <!------------------------------------------------  SECTION 6 -------------------------------------------->
          
-         <section data-scroll id="interest" class="section6 scroll-effect-3">
+         <section data-scroll id="interest" class="section6 scroll-effect-3 container1">
              <h1 class="h1 section6-heading">What I Love 💛</h1>
              <div class="para2">
                  There are lots of things which I learned and still learning.
@@ -572,8 +574,8 @@
              </div>
          </section>
     </main>
-     <!------------------------------------------------  SECTION 7 -------------------------------------------->
-        <section data-scroll id="contact" class="section7 scroll-effect-3">
+         <!------------------------------------------------  SECTION 7 -------------------------------------------->
+        <section data-scroll id="contact" class="section7 scroll-effect-3 container1">
             <footer>
                 <h2 class="h2 footer-heading">Contact Me ☎</h2>
                 <p class="para2 foot-para">Availabe for hire. Discuss a project or wanna say HI my inbox 📭 is open for all</p>
