--- a/index.html
+++ b/index.html
@@ -19,24 +19,20 @@
           </div>
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="##" class="nav-links themes"
-                >Change Theme <span class="link-arrow">></span></a
+              <span class="nav-links themes"
+                >Change Theme <span class="link-arrow">></span></span
               >
               <ul class="sub-list sub-list1">
                 <li class="sub-items">
-                  <a href="##" class="sub-nav-links" onclick="defaultTheme()"
-                    >Default Theme</a
+                  <span class="sub-nav-links" onclick="defaultTheme()"
+                    >Default Theme</span
                   >
                 </li>
                 <li class="sub-items">
-                  <a href="##" class="sub-nav-links" onclick="theme1()"
-                    >Theme 1</a
-                  >
+                  <span class="sub-nav-links" onclick="theme1()">Theme 1</span>
                 </li>
                 <li class="sub-items">
-                  <a href="##" class="sub-nav-links" onclick="theme2()"
-                    >Theme2</a
-                  >
+                  <span class="sub-nav-links" onclick="theme2()">Theme2</span>
                 </li>
               </ul>
             </li>
@@ -44,8 +40,8 @@
               <a href="#skills" class="nav-links">Skills </a>
             </li>
             <li class="nav-item">
-              <a href="##" class="nav-links works"
-                >My Work <span class="link-arrow">></span></a
+              <span class="nav-links works"
+                >My Work <span class="link-arrow">></span></span
               >
               <ul class="sub-list sub-list2">
                 <li class="sub-items">
@@ -103,16 +99,8 @@
             /></a>
           </div>
           <div class="para1 btn-group">
-            <a href="#contact"
-              ><button type="button" class="card-btn sec1-btn">
-                Contact me
-              </button></a
-            >
-            <a href="#psd"
-              ><button type="button" class="card-btn sec1-btn">
-                My Projects
-              </button></a
-            >
+            <a href="#contact" class="card-btn sec1-btn"> Contact me </a>
+            <a href="#psd" class="card-btn sec1-btn"> My Projects </a>
           </div>
         </div>
         <div data-scroll="" class="section1part2 scroll-effect-1">
@@ -591,17 +579,15 @@
               <div class="btn-group">
                 <a
                   href="https://programmerowais.github.io/blogr-page.github.io/"
+                  class="card-btn sec5-card-btn"
                 >
-                  <button type="button" class="card-btn sec5-card-btn">
-                    View site
-                  </button></a
+                  View site</a
                 >
                 <a
                   href="https://github.com/ProgrammerOwais/blogr-page.github.io"
+                  class="card-btn sec5-card-btn"
                 >
-                  <button type="button" class="card-btn sec5-card-btn">
-                    View Code
-                  </button></a
+                  View Code</a
                 >
               </div>
             </div>
@@ -631,18 +617,16 @@
               <div class="btn-group">
                 <a
                   href="https://programmerowais.github.io/ProgrammerOwais-interactive-pricing-component-by--Owais.github.io/"
+                  class="card-btn sec5-card-btn"
                 >
-                  <button type="button" class="card-btn sec5-card-btn">
-                    View site
-                  </button></a
-                >
+                  View site
+                </a>
                 <a
                   href="https://github.com/ProgrammerOwais/ProgrammerOwais-interactive-pricing-component-by--Owais.github.io/tree/master"
+                  class="card-btn sec5-card-btn"
                 >
-                  <button type="button" class="card-btn sec5-card-btn">
-                    View Code
-                  </button></a
-                >
+                  View Code
+                </a>
               </div>
             </div>
           </div>
@@ -667,18 +651,16 @@
               <div class="btn-group">
                 <a
                   href="https://programmerowais.github.io/sunnyside-agency-page.github.io/"
+                  class="card-btn sec5-card-btn"
                 >
-                  <button type="button" class="card-btn sec5-card-btn">
-                    View site
-                  </button></a
-                >
+                  View site
+                </a>
                 <a
                   href="https://github.com/ProgrammerOwais/sunnyside-agency-page.github.io"
+                  class="card-btn sec5-card-btn"
                 >
-                  <button type="button" class="card-btn sec5-card-btn">
-                    View Code
-                  </button></a
-                >
+                  View Code
+                </a>
               </div>
             </div>
           </div>
@@ -719,18 +701,16 @@
               <div class="btn-group">
                 <a
                   href="https://programmerowais.github.io/Owais-Restaurant.github.io/"
+                  class="card-btn sec5-card-btn2"
                 >
-                  <button type="button" class="card-btn sec5-card-btn2">
-                    View site
-                  </button></a
-                >
+                  View site
+                </a>
                 <a
                   href="https://github.com/ProgrammerOwais/Owais-Restaurant.github.io"
+                  class="card-btn sec5-card-btn2"
                 >
-                  <button type="button" class="card-btn sec5-card-btn2">
-                    View Code
-                  </button></a
-                >
+                  View Code
+                </a>
               </div>
             </div>
           </div>
@@ -762,18 +742,16 @@
               <div class="btn-group">
                 <a
                   href="https://programmerowais.github.io/millionaire-authors.github.io/"
+                  class="card-btn sec5-card-btn2"
                 >
-                  <button type="button" class="card-btn sec5-card-btn2">
-                    View site
-                  </button></a
-                >
+                  View site
+                </a>
                 <a
                   href="https://github.com/ProgrammerOwais/millionaire-authors.github.io"
+                  class="card-btn sec5-card-btn2"
                 >
-                  <button type="button" class="card-btn sec5-card-btn2">
-                    View Code
-                  </button></a
-                >
+                  View Code
+                </a>
               </div>
             </div>
           </div>
@@ -801,18 +779,16 @@
               <div class="btn-group">
                 <a
                   href="https://programmerowais.github.io/Space-Planets.github.io/"
+                  class="card-btn sec5-card-btn2"
                 >
-                  <button type="button" class="card-btn sec5-card-btn2">
-                    View site
-                  </button></a
-                >
+                  View site
+                </a>
                 <a
                   href="https://github.com/ProgrammerOwais/Space-Planets.github.io"
+                  class="card-btn sec5-card-btn2"
                 >
-                  <button type="button" class="card-btn sec5-card-btn2">
-                    View Code
-                  </button></a
-                >
+                  View Code
+                </a>
               </div>
             </div>
           </div>
