--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </header>
 
     <main>
-      <!------------------------------------------------  SECTION 1 -------------------------------------------->
+      <!-- ***************************************** SECTION 1 *****************************************  -->
       <section class="section1 container1">
         <div class="section1part1">
           <h3 class="h3 section1-heading">Hi there 👋</h3>
@@ -107,7 +107,7 @@
           <img src="images/programmerowais.svg" alt="images" class="sec1-img" />
         </div>
       </section>
-      <!------------------------------------------------  SECTION 2 -------------------------------------------->
+      <!-- ***************************************** SECTION 2 *****************************************  -->
       <section class="section2 container1">
         <div class="div-img">
           <img
@@ -137,7 +137,7 @@
           </p>
         </div>
       </section>
-      <!------------------------------------------------  SECTION 3 -------------------------------------------->
+      <!-- ***************************************** SECTION 3 *****************************************  -->
       <section id="skills" class="section3 container1">
         <div data-scroll class="card card3 scroll-effect-3">
           <div class="header-section">
@@ -511,7 +511,7 @@
           </div>
         </div>
       </section>
-      <!------------------------------------------------  SECTION 4 -------------------------------------------->
+      <!-- ***************************************** SECTION 4 *****************************************  -->
       <section class="section4 container1">
         <div class="section4-img-container">
           <img
@@ -528,7 +528,7 @@
           />
         </div>
       </section>
-      <!------------------------------------------------  SECTION 5 -------------------------------------------->
+      <!-- ***************************************** SECTION 5 *****************************************  -->
       <section id="mywork" class="section5 container1">
         <div
           data-scroll
@@ -794,7 +794,7 @@
           </div>
         </div>
       </section>
-      <!------------------------------------------------  SECTION 6 -------------------------------------------->
+      <!-- ***************************************** SECTION 6 *****************************************  -->
 
       <section
         data-scroll
@@ -833,7 +833,7 @@
         </div>
       </section>
     </main>
-    <!------------------------------------------------  SECTION 7 -------------------------------------------->
+    <!-- ***************************************** SECTION 7 *****************************************  -->
     <section
       data-scroll
       id="contact"
