--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
         </div>
       </section>
       <!-- ***************************************** SECTION 4 *****************************************  -->
-      <section class="section4 container1">
+      <div class="section4 container1">
         <div class="section4-img-container">
           <img
             data-scroll
@@ -527,7 +527,7 @@
             class="section4-img scroll-effect-1 img-change2"
           />
         </div>
-      </section>
+      </div>
       <!-- ***************************************** SECTION 5 *****************************************  -->
       <section id="mywork" class="section5 container1">
         <div
