--- a/index.html
+++ b/index.html
@@ -870,6 +870,6 @@
         <p class="para2 foot-para">Createed by Muhammad Owais</p>
       </footer>
     </section>
-    <script src="java.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
