--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Muhammad Owais" />
+    <meta
+      name="description"
+      content="Hi my dears , this is my first portfolio w3c validated"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>OWAIS PORTFOLIO</title>
   </head>
