--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Muhammad Owais" />
     <meta
       name="description"
-      content="Hi my dears , this is my first portfolio w3c validated"
+      content="Hi my dears , this is my first portfolio w3c validated web. Here in this web I only use HTML/CSS/JS. The main feature which I added to this web is that of scrolling effect & hide/show sticky navbar."
     />
     <link rel="stylesheet" href="style.css" />
     <title>OWAIS PORTFOLIO</title>
